<resources>
    <string name="app_name">My School APP</string>
    <string name="take_photo">take photo</string>
    <string name="school_name">School Name</string>
    <string name="school_region">School Region</string>
    <string name="school_country">School Country</string>
    <string name="date_founded">Date Founded</string>
    <string name="school_status">School Status</string>
    <string name="school_latitude">School Latitude</string>
    <string name="school_longitude">School Longitude</string>
    <string name="submit">Submit</string>
    <string name="edit">Edit</string>
    <string name="delete">Delete</string>
</resources>