<?xml version="1.0" encoding="utf-8"?>

<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <data>

        <variable
            name="school"
            type="com.tanacom.myschool.ui.school.model.SchoolPojo" />

    </data>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <androidx.appcompat.widget.Toolbar
            android:id="@+id/toolbar"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:background="?attr/colorPrimary"
            android:elevation="3dp"
            android:theme="@style/ThemeOverlay.MaterialComponents.Dark"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:title="School Registration"
            tools:targetApi="lollipop" />

        <androidx.core.widget.NestedScrollView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:padding="5dp"
            app:layout_constraintBottom_toTopOf="@id/lay_submit"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/toolbar">

            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:animateLayoutChanges="true">

                <androidx.constraintlayout.widget.ConstraintLayout
                    android:id="@+id/fotoBkg"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginBottom="5dp"
                    android:padding="5dp">

                    <com.google.android.material.imageview.ShapeableImageView
                        android:id="@+id/schoolPhoto"
                        android:layout_width="110dp"
                        android:layout_height="110dp"
                        android:layout_gravity="center"
                        android:padding="5dp"
                        android:scaleType="fitXY"
                        android:src="@drawable/ic_placeholder"
                        app:layout_constraintEnd_toEndOf="parent"
                        app:layout_constraintStart_toStartOf="parent"
                        app:layout_constraintTop_toTopOf="parent"
                        app:shapeAppearanceOverlay="@style/roundedImageViewRounded"
                        app:strokeColor="@color/colorAccent"
                        app:strokeWidth="5dp" />

                    <androidx.appcompat.widget.AppCompatTextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_gravity="center"
                        android:layout_marginTop="72dp"
                        android:background="@drawable/background_text"
                        android:drawableStart="@drawable/ic_add_24"
                        android:drawableLeft="@drawable/ic_add_24"
                        android:gravity="center"
                        android:text="@string/take_photo"
                        android:textColor="@color/white"
                        android:textSize="12sp"
                        android:textStyle="bold"
                        app:layout_constraintEnd_toEndOf="parent"
                        app:layout_constraintHorizontal_bias="0.61"
                        app:layout_constraintStart_toStartOf="parent"
                        app:layout_constraintTop_toTopOf="parent" />

                </androidx.constraintlayout.widget.ConstraintLayout>

                <TableLayout
                    android:id="@+id/tabLayout"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_below="@id/fotoBkg"
                    android:layout_marginStart="10dp"
                    android:layout_marginTop="10dp"
                    android:layout_marginEnd="10dp"
                    android:layout_marginBottom="20dp"
                    android:baselineAligned="false"
                    android:orientation="vertical"
                    android:stretchColumns="*">

                    <TableRow android:layout_marginTop="20dp">

                        <androidx.appcompat.widget.AppCompatTextView
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:layout_marginBottom="5dp"
                            android:layout_weight="1"
                            android:labelFor="@id/school_name"
                            android:text="@string/school_name"
                            android:textColor="@color/colorAccent"
                            android:textSize="14sp"
                            android:textStyle="bold" />

                    </TableRow>

                    <TableRow>

                        <androidx.appcompat.widget.AppCompatEditText
                            android:id="@+id/school_name"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_weight="1"
                            android:background="@drawable/background_form"
                            android:drawablePadding="5dp"
                            android:focusable="true"
                            android:importantForAutofill="no"
                            android:inputType="text"
                            android:minHeight="40dp"
                            android:paddingLeft="10dp"
                            android:paddingRight="10dp"
                            android:text="@={school.schoolName}"
                            app:validateEmpty="@{true}"
                            tools:ignore="KeyboardInaccessibleWidget" />

                    </TableRow>

                    <TableRow android:layout_marginTop="20dp">

                        <androidx.appcompat.widget.AppCompatTextView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_column="0"
                            android:layout_marginEnd="5dp"
                            android:layout_marginRight="5dp"
                            android:layout_marginBottom="5dp"
                            android:labelFor="@+id/school_region"
                            android:text="@string/school_region"
                            android:textColor="@color/colorAccent"
                            android:textSize="14sp"
                            android:textStyle="bold" />

                        <androidx.appcompat.widget.AppCompatTextView
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:layout_column="1"
                            android:layout_marginBottom="5dp"
                            android:labelFor="@+id/accessibility"
                            android:text="@string/school_country"
                            android:textColor="@color/colorAccent"
                            android:textStyle="bold" />

                    </TableRow>

                    <TableRow>

                        <androidx.appcompat.widget.AppCompatEditText
                            android:id="@+id/school_region"
                            android:layout_width="181dp"
                            android:layout_height="wrap_content"
                            android:layout_column="0"
                            android:layout_marginEnd="5dp"
                            android:layout_marginRight="5dp"
                            android:background="@drawable/background_form"
                            android:drawableEnd="@drawable/ic_arrow_drop_down"
                            android:drawableRight="@drawable/ic_arrow_drop_down"
                            android:drawablePadding="5dp"
                            android:focusable="true"
                            android:importantForAutofill="no"
                            android:inputType="text"
                            android:minHeight="40dp"
                            android:paddingLeft="10dp"
                            android:paddingRight="10dp"
                            android:text="@={school.schoolRegion}"
                            android:textSize="14sp"
                            app:validateEmpty="@{true}"
                            tools:ignore="KeyboardInaccessibleWidget" />

                        <androidx.appcompat.widget.AppCompatEditText
                            android:id="@+id/school_country"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_column="0"
                            android:layout_marginEnd="5dp"
                            android:layout_marginRight="5dp"
                            android:background="@drawable/background_form"
                            android:drawableEnd="@drawable/ic_arrow_drop_down"
                            android:drawableRight="@drawable/ic_arrow_drop_down"
                            android:drawablePadding="5dp"
                            android:focusable="true"
                            android:importantForAutofill="no"
                            android:inputType="text"
                            android:minHeight="40dp"
                            android:paddingLeft="10dp"
                            android:paddingRight="10dp"
                            android:text="@={school.schoolCountry}"
                            android:textSize="14sp"
                            app:validateEmpty="@{true}"
                            tools:ignore="KeyboardInaccessibleWidget" />

                    </TableRow>

                    <TableRow android:layout_marginTop="20dp">

                        <androidx.appcompat.widget.AppCompatTextView
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:layout_marginBottom="5dp"
                            android:layout_weight="1"
                            android:labelFor="@+id/license_date"
                            android:text="@string/date_founded"
                            android:textColor="@color/colorAccent"
                            android:textStyle="bold" />

                    </TableRow>

                    <TableRow>

                        <androidx.appcompat.widget.AppCompatEditText
                            android:id="@+id/date_founded"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_weight="1"
                            android:background="@drawable/background_form"
                            android:clickable="true"
                            android:drawableEnd="@drawable/ic_arrow_drop_down"
                            android:drawableRight="@drawable/ic_arrow_drop_down"
                            android:drawablePadding="5dp"
                            android:focusable="false"
                            android:importantForAutofill="no"
                            android:inputType="text"
                            android:minHeight="40dp"
                            android:paddingLeft="10dp"
                            android:paddingRight="10dp"
                            android:text="@={school.schoolDateFounded}"
                            android:textSize="14sp"
                            app:validateEmpty="@{true}"
                            tools:ignore="KeyboardInaccessibleWidget" />

                    </TableRow>

                    <TableRow android:layout_marginTop="20dp">

                        <androidx.appcompat.widget.AppCompatTextView
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:layout_marginBottom="5dp"
                            android:layout_weight="1"
                            android:labelFor="@+id/school_status"
                            android:text="@string/school_status"
                            android:textColor="@color/colorAccent"
                            android:textStyle="bold" />

                    </TableRow>

                    <TableRow>

                        <androidx.appcompat.widget.AppCompatEditText
                            android:id="@+id/school_status"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_weight="1"
                            android:background="@drawable/background_form"
                            android:clickable="true"
                            android:drawableEnd="@drawable/ic_arrow_drop_down"
                            android:drawableRight="@drawable/ic_arrow_drop_down"
                            android:drawablePadding="5dp"
                            android:focusable="false"
                            android:importantForAutofill="no"
                            android:inputType="text"
                            android:minHeight="40dp"
                            android:paddingLeft="10dp"
                            android:paddingRight="10dp"
                            android:text="@={school.schoolStatus}"
                            android:textSize="14sp"
                            app:validateEmpty="@{true}"
                            tools:ignore="KeyboardInaccessibleWidget" />

                    </TableRow>

                    <TableRow android:layout_marginTop="20dp">

                        <androidx.appcompat.widget.AppCompatTextView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_column="0"
                            android:layout_marginEnd="5dp"
                            android:layout_marginRight="5dp"
                            android:layout_marginBottom="5dp"
                            android:labelFor="@+id/school_population"
                            android:text="@string/school_longitude"
                            android:textColor="@color/colorAccent"
                            android:textStyle="bold" />

                        <androidx.appcompat.widget.AppCompatTextView
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:layout_column="1"
                            android:layout_marginBottom="5dp"
                            android:labelFor="@+id/date_founded"
                            android:text="@string/school_latitude"
                            android:textColor="@color/colorAccent"
                            android:textStyle="bold" />

                    </TableRow>

                    <TableRow>

                        <androidx.appcompat.widget.AppCompatEditText
                            android:id="@+id/school_logitude"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_column="0"
                            android:layout_marginEnd="5dp"
                            android:layout_marginRight="5dp"
                            android:background="@drawable/background_form"
                            android:drawablePadding="5dp"
                            android:importantForAutofill="no"
                            android:inputType="text"
                            android:minHeight="40dp"
                            android:paddingLeft="10dp"
                            android:paddingRight="10dp"
                            android:text="@={school.schoolLogitude}"
                            android:textSize="14sp"
                            app:validateEmpty="@{true}"
                            tools:ignore="KeyboardInaccessibleWidget" />

                        <androidx.appcompat.widget.AppCompatEditText
                            android:id="@+id/school_latitude"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_column="1"
                            android:background="@drawable/background_form"
                            android:drawablePadding="5dp"
                            android:importantForAutofill="no"
                            android:inputType="text"
                            android:minHeight="40dp"
                            android:paddingLeft="10dp"
                            android:paddingRight="10dp"
                            android:text="@={school.schoolLatitude}"
                            android:textSize="14sp"
                            app:validateEmpty="@{true}"
                            tools:ignore="KeyboardInaccessibleWidget" />

                    </TableRow>

                </TableLayout>

                <ProgressBar
                    android:id="@+id/progress_bar"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_centerInParent="true"
                    android:visibility="gone"
                    tools:ignore="MissingConstraints" />

            </RelativeLayout>

        </androidx.core.widget.NestedScrollView>

        <LinearLayout
            android:id="@+id/lay_submit"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="30dp"
            android:layout_marginTop="10dp"
            android:layout_marginEnd="30dp"
            android:layout_marginBottom="10dp"
            app:layout_constraintBottom_toBottomOf="parent">

            <androidx.appcompat.widget.AppCompatButton
                android:id="@+id/submit_button"
                style="@style/Widget.AppCompat.Button.Borderless"
                android:layout_width="match_parent"
                android:layout_height="54dp"
                android:layout_gravity="center_horizontal"
                android:background="@drawable/background_selectable_button"
                android:text="@string/submit"
                android:textAllCaps="false"
                android:textColor="@color/white"
                android:textSize="18sp"
                android:textStyle="bold" />

        </LinearLayout>

    </androidx.constraintlayout.widget.ConstraintLayout>

</layout>